--- a/JavaScript/Simpsons/css/style.css
+++ b/JavaScript/Simpsons/css/style.css
@@ -28,3 +28,12 @@
 .quitarBorde{
     border:none;
 }
+
+.classMuestra{
+    display:flex;
+    justify-content: center;
+    border: 1px solid red;
+    margin: 0 auto;
+    width: 20%;
+}
+
