--- a/Angular/indice/src/app/cuerpo/cuerpo.component.html
+++ b/Angular/indice/src/app/cuerpo/cuerpo.component.html
@@ -9,4 +9,9 @@
         <a class="btn btn-outline-dark mx-2" href="http://sergioorgaz-angular.atwebpages.com/Suma-Resta/" role="button">Suma-Resta</a>
         <a class="btn btn-outline-dark mx-2" href="http://sergioorgaz-angular.atwebpages.com/Temporizador-Angular/" role="button">Temporizador-Angular</a>
     </div>
+
+    <div class="d-flex justify-content-center mt-4">
+      <a class="btn btn-outline-dark mx-2" href="http://sergioorgaz-angular.atwebpages.com/Select-Colores/" role="button">Select-Colores</a>
+  </div>
+
 </div>
