--- a/Angular/indice/src/app/cuerpo/cuerpo.component.html
+++ b/Angular/indice/src/app/cuerpo/cuerpo.component.html
@@ -12,6 +12,8 @@
 
     <div class="d-flex justify-content-center mt-4">
       <a class="btn btn-outline-dark mx-2" href="http://sergioorgaz-angular.atwebpages.com/Select-Colores/" role="button">Select-Colores</a>
-  </div>
+      <a class="btn btn-outline-dark mx-2" href="http://sergioorgaz-angular.atwebpages.com/Chica-Chico/" role="button">Chica-Chico</a>
+      <a class="btn btn-outline-dark mx-2" href="http://sergioorgaz-angular.atwebpages.com/Efectos-Hover/" role="button">Efectos-Hover</a>
+    </div>
 
 </div>
