--- a/Angular/indice/src/app/cuerpo/cuerpo.component.html
+++ b/Angular/indice/src/app/cuerpo/cuerpo.component.html
@@ -16,4 +16,10 @@
       <a class="btn btn-outline-dark mx-2" href="http://sergioorgaz-angular.atwebpages.com/Efectos-Hover/" role="button">Efectos-Hover</a>
     </div>
 
+    <div class="d-flex justify-content-center mt-4">
+        <a class="btn btn-outline-dark mx-2" href="http://sergioorgaz-angular.atwebpages.com/Fruteria" role="button">Fruteria</a>
+        <a class="btn btn-outline-dark mx-2" href="http://sergioorgaz-angular.atwebpages.com/Crud-Fruteria" role="button">Crud-Fruteria</a>
+        <a class="btn btn-outline-dark mx-2" href="http://sergioorgaz-angular.atwebpages.com/Chat-Angular" role="button">Chat-Angular</a>
+      </div>
+
 </div>
