--- a/Angular/Chat-Angular/src/app/mensajeria/mensajeria.component.html
+++ b/Angular/Chat-Angular/src/app/mensajeria/mensajeria.component.html
@@ -12,7 +12,8 @@
           <input [(ngModel)]="chatSeleccionado.mensaje" type="text" name="mensaje" id="mensaje" class="form-control" placeholder="Introduce el mensaje">
         </div>
         <button (click)="leerMensajes()" class="btn btn-success" style="margin: 5px;">Leer Mensajes</button>
-        <button (click)="aniadirMensaje(f)" class="btn btn-success" style="margin: 5px;">Actualizar Mensajes</button>
+        <button (click)="aniadirMensaje(f)" class="btn btn-success" style="margin: 5px;">Mandar Mensajes</button>
+        <button (click)="borrarTodosMensajes()" class="btn btn-danger" style="margin: 5px;">Borrar Todos Los Mensajes</button>
       </form>
     </div>
     <div class="col-lg-12">
@@ -23,6 +24,7 @@
             <th>Fecha</th>
             <th>Usuario</th>
             <th>Mensaje</th>
+            <th>Accion</th>
           </tr>
         </thead>
         <tbody>
@@ -31,6 +33,7 @@
             <td>{{m.fecha}}</td>
             <td>{{m.usuario}}</td>
             <td>{{m.mensaje}}</td>
+            <td><button (click)="borrarMensaje(m.id)" class="btn btn-warning" style="margin: 5px;">Borrar Mensaje</button></td>
           </tr>
         </tbody>
       </table>
