--- a/Angular/Crud-Empleados/src/app/listado-empleados/listado-empleados.component.html
+++ b/Angular/Crud-Empleados/src/app/listado-empleados/listado-empleados.component.html
@@ -4,7 +4,7 @@
 </mat-form-field>
 
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort>
+  <table mat-table [dataSource]="dataSource" matSort >
 
     <!-- ID Column -->
     <ng-container matColumnDef="id">
@@ -45,13 +45,17 @@
     <!-- Fruit Column -->
     <ng-container matColumnDef="borrar">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Borrar </th>
-      <td mat-cell *matCellDef="let empleado"> <button (click)="eliminarEmpleado(empleado.id)">Eliminar</button></td>
+      <td mat-cell *matCellDef="let empleado">
+        <button (click)="eliminarEmpleado(empleado.id)" mat-fab style="background: linear-gradient(90deg, #072727,#195e6c,#eb2d4a,#f1681e,#ffeee5);">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
     </ng-container>
 
     <!-- Fruit Column -->
     <ng-container matColumnDef="modificar">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Modificar </th>
-      <td mat-cell *matCellDef="let empleado"> <button (click)="modificarEmpleado(empleado.id)">Modificar</button> </td>
+      <td mat-cell *matCellDef="let empleado"> <button (click)="modificarEmpleado(empleado.id)" mat-fab style="background: linear-gradient(90deg, #0000ff,#0000ff,#00ffff);"><mat-icon>create</mat-icon></button> </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnas"></tr>
