--- a/Angular/Crud-Empleados/src/app/listado-empleados/listado-empleados.component.html
+++ b/Angular/Crud-Empleados/src/app/listado-empleados/listado-empleados.component.html
@@ -3,6 +3,8 @@
   <input matInput (keyup)="buscador($event)" placeholder="Buscador ..." #input>
 </mat-form-field>
 
+<button mat-raised-button (click)="crearEmpleado()">Crear Empleado</button>
+
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort >
 
@@ -46,7 +48,7 @@
     <ng-container matColumnDef="borrar">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Borrar </th>
       <td mat-cell *matCellDef="let empleado">
-        <button (click)="eliminarEmpleado(empleado.id)" mat-fab style="background: linear-gradient(90deg, #072727,#195e6c,#eb2d4a,#f1681e,#ffeee5);">
+        <button (click)="eliminarEmpleado(empleado.id)" mat-fab style="background:#eb2d4a;">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
@@ -55,7 +57,7 @@
     <!-- Fruit Column -->
     <ng-container matColumnDef="modificar">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Modificar </th>
-      <td mat-cell *matCellDef="let empleado"> <button (click)="modificarEmpleado(empleado.id)" mat-fab style="background: linear-gradient(90deg, #0000ff,#0000ff,#00ffff);"><mat-icon>create</mat-icon></button> </td>
+      <td mat-cell *matCellDef="let empleado"> <button (click)="modificarEmpleado(empleado)" mat-fab style="background:#0000ff;"><mat-icon>create</mat-icon></button> </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnas"></tr>
