--- a/Angular/indice/src/app/cuerpo/cuerpo.component.html
+++ b/Angular/indice/src/app/cuerpo/cuerpo.component.html
@@ -25,6 +25,7 @@
     <div class="d-flex justify-content-center mt-4">
       <a class="btn btn-outline-dark mx-2" href="http://sergioorgaz-angular.atwebpages.com/Crud-Empleados" role="button">Crud-Empleados</a>
       <a class="btn btn-outline-dark mx-2" href="http://sergioorgaz-angular.atwebpages.com/Crud-Coches" role="button">Tabla-Material-Coches</a>
+      <a class="btn btn-outline-dark mx-2" href="http://sergioorgaz-angular.atwebpages.com/Crud-Material-Fruteria" role="button">Crud-Material-Fruteria</a>
     </div>
     
 
