--- a/Angular/Menu-Material/src/app/brecol/brecol.component.html
+++ b/Angular/Menu-Material/src/app/brecol/brecol.component.html
@@ -1,1 +1,8 @@
-<p>brecol works!</p>
+
+<h1>Coliflor</h1>
+<h1>Conversor de numeros a texto (ESP/ENG)</h1>
+<label >Teclea un numero entre 1 y 10</label>
+<input type="number" [(ngModel)] = "numero" (ngModelChange)="traduccion()" min="1" max="10">
+<h1>In English: {{(english)}}</h1>
+<h1>En Español: {{espaniol}} </h1>
+
