--- a/Angular/Menu-Material/src/app/coliflor/coliflor.component.html
+++ b/Angular/Menu-Material/src/app/coliflor/coliflor.component.html
@@ -1,1 +1,6 @@
-<p>coliflor works!</p>
+<h1>Brecol</h1>
+<div style="padding: 60px;" [ngStyle]="{ 'background-color': color}">
+
+</div>
+<button class="btn btn-danger" (click)="generarColorRandom()">Color Random:</button>
+<button (click)="parar()">Parar</button>
