--- a/Angular/Menu-Material/src/app/lombarda/lombarda.component.html
+++ b/Angular/Menu-Material/src/app/lombarda/lombarda.component.html
@@ -1,1 +1,6 @@
-<p>lombarda works!</p>
+<h1>Lombarda</h1>
+<div style="padding: 60px;" [ngStyle]="{ 'background-color': color}" (click)="jugar()">
+  {{colorTexto}}
+</div>
+<button class="btn btn-danger" (click)="generarColorRandom()">Jugar</button>
+<p>Puntos = {{puntos}}</p>
