--- a/Angular/Menu-Material/src/app/repollo/repollo.component.html
+++ b/Angular/Menu-Material/src/app/repollo/repollo.component.html
@@ -1,1 +1,5 @@
-<p>repollo works!</p>
+<h1>ROMANESKU</h1>
+<h1>Contador de Apariciones</h1>
+<label>Introduce un numero (1-20)</label>
+<input type="number" min="1" max="20" [(ngModel)] = "numero" (ngModelChange)="contar()">
+<h1>El numero {{numero}} aparece {{numVeces}} veces en el array</h1>
