--- a/Angular/Chat-Reactivo/src/app/registro/registro.component.html
+++ b/Angular/Chat-Reactivo/src/app/registro/registro.component.html
@@ -1,23 +1,23 @@
-<div class="container">
-  <div class="row d-flex justify-content-center">
-    <div class="col-lg-12">
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="row w-100">
+    <div class="col-lg-6 col-md-8 col-sm-10 mx-auto">
       <div class="form-group">
         <label for="nombre">Introduce Nombre:</label>
-        <input type="text" name="nombre" id="nombre" placeholder="Introduce el nombre" [(ngModel)]="usuario.nombre">
+        <input type="text" name="nombre" id="nombre" placeholder="Introduce el nombre" [(ngModel)]="usuario.nombre" class="form-control">
       </div>
       <div class="form-group">
         <label for="email">Introduce Email:</label>
-        <input type="email" name="email" id="email" placeholder="Introduce el email" [(ngModel)]="usuario.email">
+        <input type="email" name="email" id="email" placeholder="Introduce el email" [(ngModel)]="usuario.email" class="form-control">
       </div>
       <div class="form-group">
         <label for="password">Introduce Contraseña:</label>
-        <input type="password" name="password" id="password" placeholder="Introduce la Contraseña" [(ngModel)]="usuario.pwd">
+        <input type="password" name="password" id="password" placeholder="Introduce la Contraseña" [(ngModel)]="usuario.pwd" class="form-control">
       </div>
       <div class="form-group">
         <label for="password">Vuelve a introducir Contraseña:</label>
-        <input type="password" name="password" id="password" placeholder="Introduce la Contraseña" [(ngModel)]="confirmar">
+        <input type="password" name="password" id="password" placeholder="Introduce la Contraseña" [(ngModel)]="confirmar" class="form-control">
       </div>
-      <button type="submit" (click)="registrar()" class="btn btn-success">Registrar Usuario</button>
+      <button type="submit" (click)="registrar()" class="btn btn-success w-100">Registrar Usuario</button>
     </div>
   </div>
 </div>
