--- a/Angular/ChatLazy/src/app/chat-privado/chat-privado.component.html
+++ b/Angular/ChatLazy/src/app/chat-privado/chat-privado.component.html
@@ -1,1 +1,63 @@
-<p>chat-privado works!</p>
+<p *ngIf="!nombreUs">Usuario: sesión cerrada</p>
+<ng-container *ngIf="nombreUs">
+<p>Usuario: {{ nombreUs }}</p>
+<button class="btn btn-danger" (click)="cerrarSesion()">Cerrar Sesión</button>
+</ng-container>
+<h1>Mensajes Globales</h1>
+
+  <div class="">
+    <mat-form-field appearance="outline">
+        <mat-label>Introduce Destinatario</mat-label>
+        <input type="text" matInput [(ngModel)]="mensajeNuevo.destinatario" placeholder="Introduce destinatario">
+    </mat-form-field>
+  </div>
+
+  <div class="">
+      <mat-form-field appearance="outline">
+          <mat-label>Introduce Mensaje</mat-label>
+          <input type="text" matInput [(ngModel)]="mensajeNuevo.mensaje" placeholder="Introduce mensaje" (keydown.enter)="aniadirMensaje()">
+      </mat-form-field>
+  </div>
+
+<input matInput (keyup)="filtar($event)" placeholder="Buscador ..." #input>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort >
+        <!-- ID Column -->
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+          <td mat-cell *matCellDef="let mensaje"> {{mensaje.id}} </td>
+        </ng-container>
+
+        <!-- Usuario Column -->
+        <ng-container matColumnDef="usuario">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario </th>
+          <td mat-cell *matCellDef="let mensaje"> {{mensaje.usuario}} </td>
+        </ng-container>
+
+        <!-- Fecha Column -->
+        <ng-container matColumnDef="fecha">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
+          <td mat-cell *matCellDef="let mensaje"> {{mensaje.fecha}} </td>
+        </ng-container>
+
+        <!-- Mensaje Column -->
+        <ng-container matColumnDef="mensaje">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Mensaje </th>
+          <td mat-cell *matCellDef="let mensaje"> {{mensaje.mensaje}} </td>
+        </ng-container>
+
+        <!-- Mensaje Column -->
+        <ng-container matColumnDef="destinatario">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Destinatario </th>
+          <td mat-cell *matCellDef="let mensaje"> {{mensaje.destinatario}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="cabecera"></tr>
+        <tr mat-row *matRowDef="let row; columns: cabecera;"></tr>
+
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">No se ha encontrado "{{input.value}}"</td>
+        </tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  </div>
