--- a/Angular/ChatLazy/src/app/chat-privado/chat-privado.component.html
+++ b/Angular/ChatLazy/src/app/chat-privado/chat-privado.component.html
@@ -19,6 +19,12 @@
       </mat-form-field>
   </div>
 
+  <div class="">
+    <select [(ngModel)]="mensajeNuevo.destinatario">
+      <option *ngFor="let usuario of listadoUsuarios" [value]="usuario.email">{{usuario.email}}</option>
+    </select>
+</div>
+
 <input matInput (keyup)="filtar($event)" placeholder="Buscador ..." #input>
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort >
