--- a/Angular/ChatLazy/src/app/login/login.component.html
+++ b/Angular/ChatLazy/src/app/login/login.component.html
@@ -1,8 +1,9 @@
+<ng-container>
 <div class="">
   <div class="">
       <div class="">
           <div class="">
-              <h1 class="">Iniciar Sesion</h1>
+              <h1 style="font-weight: bold; text-align: center;">Iniciar Sesion</h1>
           </div>
           <form [formGroup]="formRegistro" (ngSubmit)="loguearUsuario()">
               <!-- Email -->
@@ -20,10 +21,18 @@
                   </mat-form-field>
               </div>
 
-              <div class="">
-                  <button type="submit" [disabled]="!formRegistro.valid" class="">Iniciar Sesion</button>
+              <div style="text-align: center;">
+                  <button type="submit" [disabled]="!formRegistro.valid" class="btn btn-outline-primary">Iniciar Sesion</button>
               </div>
           </form>
       </div>
+      <div style="text-align: center;">
+        <h3 style="font-weight: bold;">Servicios a utilizar:</h3>
+        <mat-button-toggle-group [(ngModel)]="tipoServicios" name="servicios" (ngModelChange)="cambiarServicios($event)">
+          <mat-button-toggle value="local">Local</mat-button-toggle>
+          <mat-button-toggle value="online">Online</mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
   </div>
 </div>
+</ng-container>
